--- a/app/views/expenses/edit.html.erb
+++ b/app/views/expenses/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Expense</h1>
+<h1>Editer une dépense</h1>
 
 <%= render 'form', expense: @expense %>
 
-<%= link_to 'Show', @expense %> |
-<%= link_to 'Back', expenses_path %>
+<%= link_to 'Afficher', @expense %> |
+<%= link_to 'Retour', expenses_path %>
