--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing User</h1>
+<h1>Modifier un utilisateur</h1>
 
 <%= render 'form', user: @user %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Afficher', @user %> |
+<%= link_to 'Retour', users_path %>
