--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,14 +12,26 @@
   <% end %>
 
   <div class="field">
+    <%= form.label :email %>
+    <%= form.text_field :email, id: :user_email %>
+  </div>
+
+  <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name, id: :user_name %>
   </div>
 
   <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email, id: :user_email %>
+    <%= form.label :password %>
+    <%= form.text_field :password, id: :user_password %>
   </div>
+
+  <% if !user.persisted? %>
+    <div class="field">
+      <%= form.label :password_confirmation %>
+      <%= form.text_field :password_confirmation, id: :user_password_confirmation %>
+    </div>
+  <% end %>
 
   <div class="actions">
     <%= form.submit %>
