Make design less dirty

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,5 +10,5 @@
   <%= @user.email %>
 </p>
 
-<%= link_to 'Editer', edit_user_path(@user) %> |
-<%= link_to 'Retour', users_path %>
+<%= link_to 'Editer', edit_user_path(@user), :class => "btn btn-warning" %> |
+<%= link_to 'Retour', users_path, :class => "btn btn-primary" %>
