--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,15 +15,17 @@
  */
 /* Sticky footer styles
 -------------------------------------------------- */
-html {
+html
+{
     position: relative;
     min-height: 100%;
 }
-body {
-    /* Margin bottom by footer height */
-    margin-bottom: 60px;
+body
+{
+    padding-top: 5rem;
 }
-.footer {
+.footer
+{
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -34,19 +36,7 @@ body {
 }
 
 
-/* Custom page CSS
--------------------------------------------------- */
-/* Not required for template or sticky footer method. */
-
-body > .container {
-    padding: 60px 15px 0;
-}
-
 .footer > .container {
     padding-right: 15px;
     padding-left: 15px;
-}
-
-code {
-    font-size: 80%;
 }
