Expense: Fix ManyToMany relation

--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -32,7 +32,7 @@
     <div class="field">
       <label>Others</label>
       <%= form.select(
-              :users,
+              :user_ids,
               options_for_select(@users.map{ |user| [ user.name, user.id ] }),
               {},
               { :multiple => true }
