--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -16,7 +16,7 @@
     <% @expenses.each do |expense| %>
       <tr>
         <td><%= expense.title %></td>
-        <td><%= expense.amount_cents %></td>
+        <td><%= expense.amount %> <%= expense.amount.currency %></td>
         <td><%= expense.user.name %></td>
         <td><%= link_to 'Afficher', expense %></td>
         <td><%= link_to 'Editer', edit_expense_path(expense) %></td>
