--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
 
         <li class="nav-item">
           <% if @current_user %>
-            <%= link_to 'Déconnexion', login_path, class: 'nav-link' %>
+            <%= link_to 'Déconnexion', logout_path, class: 'nav-link' %>
           <% else %>
             <%= link_to 'Connexion', login_path, class: 'nav-link' %>
           <% end %>
