update expenses global with monetize

--- a/app/views/expenses/global.html.erb
+++ b/app/views/expenses/global.html.erb
@@ -1,4 +1,5 @@
-<h1>Balance Globale : <%= @global_user %>€</h1>
+<h1>Balance Globale : <%= @global_user %> <%= @global_user.currency %></h1>
 
-<p>On me doit <%= @user_spent %>€</p>
-<p>Je dois <%= @users_debtor %>€</p>
+<p>On me doit <%= @user_spent %> <%= @user_spent.currency %></p>
+<p>Je dois <%= @users_debtor %> <%= @users_debtor.currency %></p>
+<% console %>
