change amount to amount_money ; create amount method

--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :amount %>
-    <%= form.text_field :amount, id: :expense_amount %>
+    <%= form.label :amount_money %>
+    <%= form.text_field :amount_money, id: :expense_amount_money %>
   </div>
 
   <div class="field">
