--- a/app/views/expenses/show.html.erb
+++ b/app/views/expenses/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Montant:</strong>
-  <%= @expense.amount %> <%= @expense.amount.currency %>
+  <%= @expense.amount_money %> <%= @expense.amount_money.currency %>
 </p>
 
 <p>
