--- a/app/views/expenses/history.html.erb
+++ b/app/views/expenses/history.html.erb
@@ -1,1 +1,24 @@
 <h1>Historique de dépense</h1>
+
+<table>
+  <thead>
+  <tr>
+    <th>Intitulé</th>
+    <th>Montant</th>
+    <th>Payeur</th>
+    <th colspan="3"></th>
+  </tr>
+  </thead>
+
+  <tbody>
+  <% @user_expenses_beneficiary.each do |expense| %>
+      <tr>
+        <td><%= expense.title %></td>
+        <td><%= expense.amount_money %> <%= expense.amount_money.currency %></td>
+        <td><%= expense.user.name %></td>
+        <td><%= link_to 'Afficher', expense %></td>
+        <td><%= link_to 'Contester', expense %></td>
+      </tr>
+  <% end %>
+  </tbody>
+</table>
