--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,4 +6,4 @@
 <h2>Balance Globale : <%= @global_user %> <%= @global_user.currency %></h2>
 
 <p>Tes amis te doivent <%= @user_spent %> <%= @user_spent.currency %></p>
-<p>Tu dois <%= @users_debtor %> <%= @users_debtor.currency %> à mes amis</p>
+<p>Tu dois <%= @users_debtor %> <%= @users_debtor.currency %> à tes amis</p>
