update template with notice

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,6 +54,7 @@
 
     <!-- Begin page content -->
     <div class="container-fluid">
+      <p id="notice"><%= notice %></p>
       <%= yield %>
     </div>
 
